--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_install:
   - cd $HOME
   - test -d src || git clone https://github.com/dune-community/dune-gdt-super.git src
   - cd ${SUPERDIR}
-  - git checkout xt+core_2.4_switchover
+  - git checkout master
   - git submodule update --init --recursive
   - git submodule status
   - ${SUPERDIR}/.travis/trusty_apt_setup.bash
