[travis] fix mtime cache location

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ before_install:
   - ccache -s
   - sudo -E gem install mtime_cache
 
-  - mtime_cache --verbose dune-*/**/*.{%{cpp}} -c .mtime_cache/cache.json
+  - mtime_cache --verbose dune-*/**/*.{%{cpp}} -c ~/.mtime_cache/cache.json
   # our local scripts look for an OPTS env entry
   - ./local/bin/download_external_libraries.py
   - ./local/bin/build_external_libraries.py
@@ -120,7 +120,7 @@ cache:
     - $HOME/.ccache
     # don't use potentially not-yet-set matrix var here
     - $HOME/dune_build
-    - $HOME/.mtimes
+    - $HOME/.mtime_cache
 
 env:
   global:
