[travis] fix docker image name to run

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ services: docker
 os: linux
 
 script:
-    - docker pull renemilk/dune-testing:${DOCKER_TAG}
-    - docker run -e TESTS=${TESTS} -v $(pwd)/dune-gdt:/root/src/dune-gdt dune-testing:${DOCKER_TAG} /root/src/dune-gdt/.travis.run_tests.bash
+    - export IMAGE="renemilk/dune-testing:${DOCKER_TAG}"
+    - docker pull ${IMAGE}
+    - docker run -e TESTS=${TESTS} -v $(pwd)/dune-gdt:/root/src/dune-gdt ${IMAGE} /root/src/dune-gdt/.travis.run_tests.bash
      - ${SUPERDIR}/.travis/init_sshkey.sh ${encrypted_95fb78800815_key} ${encrypted_95fb78800815_iv} keys/dune-community/dune-gdt-testlogs
     - if [[ "x${TESTS}" != "xheadercheck" ]]; then travis_retry ${SUPERDIR}/scripts/bash/travis_upload_test_logs.bash ${SUPERDIR}/${MY_MODULE}/test_dir/; fi
 
@@ -91,7 +92,6 @@ matrix:
     - env: DOCKER_TAG=gcc-5 TESTS=23
     - env: DOCKER_TAG=gcc-5 TESTS=headercheck CLANG_FORMAT='/usr/bin/clang-format-3.8'
 #   clang 3.8
-
     #- env: DOCKER_TAG=clang-3.8 TESTS=0
     #- env: DOCKER_TAG=clang-3.8 TESTS=1
     #- env: DOCKER_TAG=clang-3.8 TESTS=2
