--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ os: linux
 script:
     - export IMAGE="renemilk/dune-testing:${DOCKER_TAG}"
     - docker pull ${IMAGE}
-    - docker run -e TESTS=${TESTS} -v $(pwd)/dune-gdt:/root/src/dune-gdt ${IMAGE} /root/src/dune-gdt/.travis.run_tests.bash
+    - travis_wait 50 docker run -e TESTS=${TESTS} -v ${TRAVIS_BUILD_DIR}:/root/src/dune-gdt ${IMAGE} /root/src/dune-gdt/.travis.run_tests.bash
      - ${SUPERDIR}/.travis/init_sshkey.sh ${encrypted_95fb78800815_key} ${encrypted_95fb78800815_iv} keys/dune-community/dune-gdt-testlogs
     - if [[ "x${TESTS}" != "xheadercheck" ]]; then travis_retry ${SUPERDIR}/scripts/bash/travis_upload_test_logs.bash ${SUPERDIR}/${MY_MODULE}/test_dir/; fi
 
