[bindings] add infrastructure

--- a/dune/CMakeLists.txt
+++ b/dune/CMakeLists.txt
@@ -5,5 +5,10 @@
 # Authors:
 #   Felix Schindler (2010, 2013 - 2016)
 
+if(dune-pybindxi_FOUND AND CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.9)
+  dune_pybindxi_add_module(gdt gdt/bindings.cc)
+  target_link_dune_default_libraries(gdt)
+endif()
+
 add_subdirectory(gdt)
 
