--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -12,8 +12,11 @@ BEGIN_TESTCASES()
 
 END_TESTCASES()
 
-# (re)generated from refresh_test_timings target
-include("builder_definitions.cmake")
+if ($ENV{TRAVIS})
+  # (re)generated from refresh_test_timings target
+  include("builder_definitions.cmake")
+endif ()
+
 # make sure there's the same amount of builders in travis as bins from distribution
 add_custom_target(regenerate_travis_yml ${CMAKE_BINARY_DIR}/dune-env-3
                     "${CMAKE_SOURCE_DIR}/.travis.yml.py" "${DXT_BIN_COUNT}" )
@@ -48,3 +51,4 @@ foreach(test_target ${dxt_test_binaries})
         target_link_libraries(${test_target} expectations_hyperbolic_fv_discretizations_yaspgrid)
     endif(${test_target} MATCHES hyperbolic__fv_discretization)
 endforeach(test_target ${dxt_test_binaries})
+
