[pylicense] update configs

--- a/.pylicense-other.cfg
+++ b/.pylicense-other.cfg
@@ -8,10 +8,12 @@
 [header]
 name = This file is part of the dune-gdt project:
 url = https://github.com/dune-community/dune-gdt
-copyright_statement = Copyright 2010-2016 dune-gdt developers and contributors. All rights reserved.
-license = BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+copyright_statement = Copyright 2010-2017 dune-gdt developers and contributors. All rights reserved.
+license = Dual licensed as  BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+          #      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
+          #          with "runtime exception" (http://www.dune-project.org/license.html)
 prefix = #
 
 [files]
-include_patterns = *.txt *.cmake *.py *.sh *.bash *.md *.dgf *.msh *.gdb *.cfg *.travis.* *.gitignore *.mailmap *.gitattributes *gitignore-* *stamp-vc *dune.module *Doxylocal *.clang-format *COPYING-CMAKE-SCRIPTS *README *LICENSE *mainpage *switch-build_dir *dune-xt-common.pc.in
+include_patterns = *.txt *.cmake *.py *.sh *.bash *.md *.dgf *.msh *.gdb *.cfg *.travis.* *.gitignore *.mailmap *.gitattributes *gitignore-* *stamp-vc *dune.module *Doxylocal *Doxystyle *.clang-format *COPYING-CMAKE-SCRIPTS *README *LICENSE *mainpage *switch-build_dir *dune-gdt-common.pc.in
 exclude_patterns = *config.h.cmake
