--- a/.pylicense-cpp.cfg
+++ b/.pylicense-cpp.cfg
@@ -8,8 +8,10 @@
 [header]
 name = This file is part of the dune-gdt project:
 url = https://github.com/dune-community/dune-gdt
-copyright_statement = Copyright 2010-2016 dune-gdt developers and contributors. All rights reserved.
-license = BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+copyright_statement = Copyright 2010-2017 dune-gdt developers and contributors. All rights reserved.
+license = Dual licensed as  BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+          //      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
+          //          with "runtime exception" (http://www.dune-project.org/license.html)
 prefix = //
 
 [files]
