--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -52,4 +52,7 @@ foreach(test_target ${dxt_test_binaries})
     if(${test_target} MATCHES hyperbolic__fv_discretization)
         target_link_libraries(${test_target} expectations_hyperbolic_fv_discretizations_yaspgrid)
     endif(${test_target} MATCHES hyperbolic__fv_discretization)
+    if(${test_target} MATCHES entropytest)
+        target_link_libraries(${test_target} CGAL)
+    endif(${test_target} MATCHES entropytest)
 endforeach(test_target ${dxt_test_binaries})
