--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -8,6 +8,11 @@
 if(dune-pybindxi_FOUND)
   dune_pybindxi_add_module(_gdt bindings.cc)
   target_link_dune_default_libraries(_gdt)
+  if(DUNE_XT_WITH_PYTHON_BINDINGS)
+    add_custom_target(bindings ALL DEPENDS _gdt)
+  else()
+    add_custom_target(bindings DEPENDS _gdt)
+  endif()
 endif()
 
 add_subdirectory(test EXCLUDE_FROM_ALL)
