[license] ignore .vcsetup

--- a/.pylicense-cpp.cfg
+++ b/.pylicense-cpp.cfg
@@ -18,4 +18,4 @@ prefix = //
 
 [files]
 include_patterns = *.cc *.cxx *.hh *.hxx *cmake_config.h.in *headercheck.cpp.in *config.h.cmake *version.hh.in *.pbh
-exclude_patterns = *mathexpr.* *gtest-all.cc
+exclude_patterns = *mathexpr.* *gtest-all.cc *.vcsetup*
