--- a/.pylicense-other.cfg
+++ b/.pylicense-other.cfg
@@ -1,9 +1,11 @@
 # This file is part of the dune-gdt project:
 #   https://github.com/dune-community/dune-gdt
 # Copyright 2010-2016 dune-gdt developers and contributors. All rights reserved.
-# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+# License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+#      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
+#          with "runtime exception" (http://www.dune-project.org/license.html)
 # Authors:
-#   Felix Schindler (2016)
+#   Felix Schindler (2016 - 2017)
 
 [header]
 name = This file is part of the dune-gdt project:
@@ -15,5 +17,5 @@ license = Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/
 prefix = #
 
 [files]
-include_patterns = *.txt *.cmake *.py *.sh *.bash *.md *.dgf *.msh *.gdb *.cfg *.travis.* *.gitignore *.mailmap *.gitattributes *gitignore-* *stamp-vc *dune.module *Doxylocal *Doxystyle *.clang-format *COPYING-CMAKE-SCRIPTS *README *LICENSE *mainpage *switch-build_dir *dune-gdt-common.pc.in
+include_patterns = *.txt *.cmake *.py *.sh *.bash *.md *.dgf *.msh *.gdb *.cfg *.travis.* *.gitignore *.mailmap *.gitattributes *gitignore-* *stamp-vc *dune.module *Doxylocal *Doxystyle *.clang-format *COPYING-CMAKE-SCRIPTS *README *LICENSE *mainpage *switch-build_dir *dune-gdt-common.pc.in *CMakeLists.txt
 exclude_patterns = *config.h.cmake
