--- a/.pylicense-other.cfg
+++ b/.pylicense-other.cfg
@@ -18,4 +18,4 @@ prefix = #
 
 [files]
 include_patterns = *.txt *.cmake *.py *.sh *.bash *.md *.dgf *.msh *.gdb *.cfg *.travis.* *.gitignore *.mailmap *.gitattributes *gitignore-* *stamp-vc *dune.module *Doxylocal *Doxystyle *.clang-format *COPYING-CMAKE-SCRIPTS *README *LICENSE *mainpage *switch-build_dir *dune-gdt-common.pc.in *CMakeLists.txt
-exclude_patterns = *config.h.cmake
+exclude_patterns = *config.h.cmake *.vcsetup*
