--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -40,34 +40,62 @@ if(dune-pybindxi_FOUND)
                                #operators/elliptic.bindings/istl_pdelab.cc
                                projections/dirichlet.bindings.cc
                                spaces/cg.bindings.cc
-                               spaces/constraints.bindings.cc
                                spaces/dg.bindings.cc
                                #spaces/fv.bindings.cc
                                )
   dune_pybindxi_add_module(assembler assembler.bindings.cc)
-  target_link_dune_default_libraries(assembler)
-  add_dune_alberta_flags(GRIDDIM 2 assembler)
+    target_link_dune_default_libraries(assembler)
+    add_dune_alberta_flags(GRIDDIM 2 assembler)
   dune_pybindxi_add_module(discretefunction discretefunction.bindings.cc)
-  target_link_dune_default_libraries(discretefunction)
-  add_dune_alberta_flags(GRIDDIM 2 discretefunction)
+    target_link_dune_default_libraries(discretefunction)
+    add_dune_alberta_flags(GRIDDIM 2 discretefunction)
+  dune_pybindxi_add_module(operators_elliptic_fem_common operators/elliptic.bindings/fem_common.cc)
+    target_link_dune_default_libraries(operators_elliptic_fem_common)
+    add_dune_alberta_flags(GRIDDIM 2 operators_elliptic_fem_common)
+  dune_pybindxi_add_module(operators_elliptic_fem_eigen operators/elliptic.bindings/fem_eigen.cc)
+    target_link_dune_default_libraries(operators_elliptic_fem_eigen)
+    add_dune_alberta_flags(GRIDDIM 2 operators_elliptic_fem_eigen)
+  dune_pybindxi_add_module(operators_elliptic_fem_istl operators/elliptic.bindings/fem_istl.cc)
+    target_link_dune_default_libraries(operators_elliptic_fem_istl)
+    add_dune_alberta_flags(GRIDDIM 2 operators_elliptic_fem_istl)
+  dune_pybindxi_add_module(operators_elliptic_pdelab_common operators/elliptic.bindings/pdelab_common.cc)
+    target_link_dune_default_libraries(operators_elliptic_pdelab_common)
+    add_dune_alberta_flags(GRIDDIM 2 operators_elliptic_pdelab_common)
+  dune_pybindxi_add_module(operators_elliptic_pdelab_eigen operators/elliptic.bindings/pdelab_eigen.cc)
+    target_link_dune_default_libraries(operators_elliptic_pdelab_eigen)
+    add_dune_alberta_flags(GRIDDIM 2 operators_elliptic_pdelab_eigen)
+  dune_pybindxi_add_module(operators_elliptic_pdelab_istl operators/elliptic.bindings/pdelab_istl.cc)
+    target_link_dune_default_libraries(operators_elliptic_pdelab_istl)
+    add_dune_alberta_flags(GRIDDIM 2 operators_elliptic_pdelab_istl)
   dune_pybindxi_add_module(projections projections.bindings.cc)
-  target_link_dune_default_libraries(projections)
-  add_dune_alberta_flags(GRIDDIM 2 projections)
+    target_link_dune_default_libraries(projections)
+    add_dune_alberta_flags(GRIDDIM 2 projections)
   dune_pybindxi_add_module(spaces spaces.bindings.cc)
-  target_link_dune_default_libraries(spaces)
-  add_dune_alberta_flags(GRIDDIM 2 spaces)
+    target_link_dune_default_libraries(spaces)
+    add_dune_alberta_flags(GRIDDIM 2 spaces)
   dune_pybindxi_add_module(_gdt bindings.cc)
-  target_link_dune_default_libraries(_gdt)
-  target_link_libraries(_gdt _gdt_bindings_helper)
+    target_link_dune_default_libraries(_gdt)
   if(DUNE_XT_WITH_PYTHON_BINDINGS)
     add_custom_target(bindings ALL DEPENDS assembler
                                            discretefunction
+                                           operators_elliptic_fem_common
+                                           operators_elliptic_fem_eigen
+                                           operators_elliptic_fem_istl
+                                           operators_elliptic_pdelab_common
+                                           operators_elliptic_pdelab_eigen
+                                           operators_elliptic_pdelab_istl
                                            projections
                                            spaces
                                            _gdt)
   else()
     add_custom_target(bindings DEPENDS assembler
                                        discretefunction
+                                       operators_elliptic_fem_common
+                                       operators_elliptic_fem_eigen
+                                       operators_elliptic_fem_istl
+                                       operators_elliptic_pdelab_common
+                                       operators_elliptic_pdelab_eigen
+                                       operators_elliptic_pdelab_istl
                                        projections
                                        spaces
                                        _gdt)
