[bindings] disable all but alugrid/fem/istl, refs #95

--- a/dune/gdt/CMakeLists.txt
+++ b/dune/gdt/CMakeLists.txt
@@ -15,12 +15,15 @@ if(dune-pybindxi_FOUND)
     dune_pybindxi_add_module(__${_target} ${_target}.bindings.cc)
     list(APPEND pybindxi_modules __${_target})
   endforeach()
-  foreach(_space_backend fem pdelab)
-    foreach(_la_backend common eigen istl)
+  #foreach(_space_backend fem pdelab)
+  foreach(_space_backend fem)
+    #foreach(_la_backend common eigen istl)
+    foreach(_la_backend istl)
       dune_pybindxi_add_module(__operators_elliptic_${_space_backend}_${_la_backend}
                                operators/elliptic.bindings/${_space_backend}_${_la_backend}.cc)
       list(APPEND pybindxi_modules __operators_elliptic_${_space_backend}_${_la_backend})
-      foreach(_grid alu alberta ug yasp)
+      #foreach(_grid alu alberta ug yasp)
+      foreach(_grid alu yasp)
         dune_pybindxi_add_module(__operators_elliptic_ipdg_${_grid}_${_space_backend}_${_la_backend}
                                  operators/elliptic-ipdg.bindings/${_grid}_${_space_backend}_${_la_backend}.cc)
         list(APPEND pybindxi_modules __operators_elliptic_ipdg_${_grid}_${_space_backend}_${_la_backend})
