--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -53,6 +53,6 @@ foreach(test_target ${dxt_test_binaries})
         target_link_libraries(${test_target} expectations_hyperbolic_fv_discretizations_yaspgrid)
     endif(${test_target} MATCHES hyperbolic__fv_discretization)
     if(${test_target} MATCHES entropytest)
-        target_link_libraries(${test_target} CGAL)
+	    target_link_libraries(${test_target} -L/home/tobias/Software/dune-gdt-super-2.5/local/lib qhull_r qhullcpp)
     endif(${test_target} MATCHES entropytest)
 endforeach(test_target ${dxt_test_binaries})
