--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 #          with "runtime exception" (http://www.dune-project.org/license.html)
 # Authors:
 #   Felix Schindler (2011 - 2014, 2016 - 2017)
+#   Rene Milk       (2017)
 
 *.user
 *Makefile
