[spaces.cg.dune-fem-wrapper] add yasp and alu to lib

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -11,7 +11,11 @@
 
 enable_testing()
 
-BEGIN_TESTCASES()
+if(DUNE_XT_WITH_PYTHON_BINDINGS)
+  BEGIN_TESTCASES(dunegdt)
+else()
+  BEGIN_TESTCASES()
+endif()
 
 END_TESTCASES()
 
